--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <title>
     Tailwind Starter Template - Landing Page Template: Tailwind Toolbox
   </title>
-  <meta name="description" content="Simple landind page" />
+  <meta name="description" content="TıktaBul ile Aracınız ile ilgili sorunların cevaplarını hemen bul!" />
   <meta name="keywords" content="" />
-  <meta name="author" content="" />
+  <meta name="author" content="Furkan Tükel" />
+
+  <link rel="icon" type="image/png" href="./assets/images/logo.png">
   <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" />
   <!--Replace with your tailwind.css once created-->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
