--- a/randevu-al.html
+++ b/randevu-al.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-        Tailwind Starter Template - Landing Page Template: Tailwind Toolbox
+        TıktaBul ile Aracınız ile ilgili sorunların cevaplarını hemen bul!
     </title>
     <meta name="description" content="TıktaBul ile Aracınız ile ilgili sorunların cevaplarını hemen bul!" />
     <meta name="keywords" content="" />
@@ -38,7 +38,7 @@
         <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
             <div class="pl-4 flex items-center">
                 <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl"
-                    href="#">
+                    href="./index.html">
                     <!--Icon from: http://www.potlabicons.com/ -->
                     <!-- <svg class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.005 512.005">
               <rect fill="#2a2a31" x="16.539" y="425.626" width="479.767" height="50.502" transform="matrix(1,0,0,1,0,0)" />
@@ -52,7 +52,7 @@
                         <img src="./assets/images/logo.png" alt="logo"
                             class="h-8 fill-current inline w-32 h-32 bg-transparent" />
                         <div class="flex flex-col  items-center">
-                            <h1 class="roboto-regular" style="font-size: 36px; font-weight: 500;">Tıkta Bul</h1>
+                            <h1 class="roboto-regular" style="font-size: 36px; font-weight: 500;">TıktaBul</h1>
                             <p class="roboto-regular" style="font-size: 18px;">Pasion</p>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                 </ul>
                 <button onclick="window.location.href='/randevu-al.html'" id="navAction"
                     class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                    Randevu Al
+                    Hakkımızda
                 </button>
             </div>
         </div>
@@ -105,15 +105,19 @@
                         <div
                             class="relative pt-10 px-10 flex items-center justify-center group-hover:scale-110 transition-transform">
                             <img class="relative w-40 h-60 rounded-xl bg" style="object-fit:contain;"
-                                src="./assets/images//car-1.png" alt="">
+                                src="./assets/images/porsche-2.png" alt="">
                         </div>
                         <div class="relative text-white px-6 pb-6 mt-6">
                             <div class="flex justify-between">
                                 <button
                                     class="bg-white hover:bg-orange-500 text-black font-bold py-2 px-4 rounded-xl w-full ml-4 mr-4">
-                                    Araç Tamir
+                                    Modifikasyon
                                 </button>
                             </div>
+                        </div>
+                        <div class="flex w-full items-center justify-center mb-4" >
+                            <input type="checkbox" class="w-4 h-4 bg-gray-800" style="background-color: #F5CC1C;" checked>
+
                         </div>
                     </div>
 
@@ -130,6 +134,10 @@
                                     Araç Tamir
                                 </button>
                             </div>
+                        </div>
+                        <div class="flex w-full items-center justify-center mb-4" >
+                            <input type="checkbox" class="w-4 h-4 bg-gray-800" style="background-color: #F5CC1C;" checked>
+
                         </div>
                     </div>
                 </div>
@@ -170,6 +178,34 @@
 
             </div>
         </div>
+
+        <!-- Change the colour #f8fafc to match the previous section colour -->
+        <svg class="wave-top" viewBox="0 0 1439 147" version="1.1" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g transform="translate(-1.000000, -14.000000)" fill-rule="nonzero">
+                    <g class="wave" fill="#f8fafc">
+                        <path
+                            d="M1440,84 C1383.555,64.3 1342.555,51.3 1317,45 C1259.5,30.824 1206.707,25.526 1169,22 C1129.711,18.326 1044.426,18.475 980,22 C954.25,23.409 922.25,26.742 884,32 C845.122,37.787 818.455,42.121 804,45 C776.833,50.41 728.136,61.77 713,65 C660.023,76.309 621.544,87.729 584,94 C517.525,105.104 484.525,106.438 429,108 C379.49,106.484 342.823,104.484 319,102 C278.571,97.783 231.737,88.736 205,84 C154.629,75.076 86.296,57.743 0,32 L0,0 L1440,0 L1440,84 Z">
+                        </path>
+                    </g>
+                    <g transform="translate(1.000000, 15.000000)" fill="#FFFFFF">
+                        <g
+                            transform="translate(719.500000, 68.500000) rotate(-180.000000) translate(-719.500000, -68.500000) ">
+                            <path
+                                d="M0,0 C90.7283404,0.927527913 147.912752,27.187927 291.910178,59.9119003 C387.908462,81.7278826 543.605069,89.334785 759,82.7326078 C469.336065,156.254352 216.336065,153.6679 0,74.9732496"
+                                opacity="0.100000001"></path>
+                            <path
+                                d="M100,104.708498 C277.413333,72.2345949 426.147877,52.5246657 546.203633,45.5787101 C666.259389,38.6327546 810.524845,41.7979068 979,55.0741668 C931.069965,56.122511 810.303266,74.8455141 616.699903,111.243176 C423.096539,147.640838 250.863238,145.462612 100,104.708498 Z"
+                                opacity="0.100000001"></path>
+                            <path
+                                d="M1046,51.6521276 C1130.83045,29.328812 1279.08318,17.607883 1439,40.1656806 L1439,120 C1271.17211,77.9435312 1140.17211,55.1609071 1046,51.6521276 Z"
+                                opacity="0.200000003"></path>
+                        </g>
+                    </g>
+                </g>
+            </g>
+        </svg>
 
         <script>
             var scrollpos = window.scrollY;
